updated skeleton to rails 4.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,38 @@
-# Ignore bundler config.
+# Ignore bundler config
 /.bundle
+
+#Ignore Configs
+Gemfile.lock
+config/database.yml
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
-/db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
 
 # Ignore other unneeded files.
-database.yml
 doc/
 *.swp
 *~
 .project
 .DS_Store
+bundler_stubs/
+*.orig
+
+
+.backup
+db/migrate/bin/*
+public/assets/**
+public/assets/books/*
+public/assets/bulletins/*
+public/assets/examquestions/*
+public/assets/notes/*
+public/assets/staffs/*
+public/assets/students/*
+public/system/**
+tmp/
+tmp/**/*
 .idea
 .secret
